@@ -1,0 +1,77 @@
+.\"	$NetBSD: tea5767radio.4,v 1.1 2018/07/27 12:02:26 rkujawa Exp $
+.\"
+.\" Copyright (c) 2018 The NetBSD Foundation, Inc.
+.\" All rights reserved.
+.\"
+.\" This code is derived from software contributed to The NetBSD Foundation
+.\" by Karuna Grewal.
+.\"
+.\" Redistribution and use in source and binary forms, with or without
+.\" modification, are permitted provided that the following conditions
+.\" are met:
+.\" 1. Redistributions of source code must retain the above copyright
+.\"    notice, this list of conditions and the following disclaimer.
+.\" 2. Redistributions in binary form must reproduce the above copyright
+.\"    notice, this list of conditions and the following disclaimer in the
+.\"    documentation and/or other materials provided with the distribution.
+.\"
+.\" THIS SOFTWARE IS PROVIDED BY THE NETBSD FOUNDATION, INC. AND CONTRIBUTORS
+.\" ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
+.\" TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+.\" PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE FOUNDATION OR CONTRIBUTORS
+.\" BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+.\" CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+.\" SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+.\" INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+.\" CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+.\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+.\" POSSIBILITY OF SUCH DAMAGE.
+.\"
+.Dd July 6, 2018
+.Dt TEA5767RADIO
+.Os
+.Sh NAME
+.Nm tea5767
+.Nd Philips/NXP TEA5767 FM Chip
+.Sh SYNOPSIS
+.Cd "tea5767radio* at iic? addr 0x60 flags 0x00"
+.Cd "radio* at tea5767radio?"
+.Sh DESCRIPTION
+The
+.Nm
+driver provides support for the Philips/NXP TEA5767 FM stereo radio.
+.Pp
+The
+.Nm
+can tune in the range 87.5 \- 108.0 MHz, perform hardware signal search
+and supports mono/stereo toggling.
+.Pp
+The flags control the FM Band, XTAL and PLL values as follows:
+.Bl -tag -width Ds
+.It 0x01
+sets the FM Band to Japan.
+.It 0x02
+sets the PLL bit.
+.It 0x04
+sets the XTAL bit.
+.It 0x08
+force enables hardware search support.
+.Sh SEE ALSO
+.Xr iic 4 ,
+.Xr radio 4 ,
+.Xr radio 9 ,
+.Rs
+.%A TEA5767
+.%T Low-power FM stereo radio
+.%N Rev. 05
+.%D 26 January 2007
+.Re
+.Sh CAVEATS
+Many popular TEA5767 evaluation boards feature low quality 32.768kHz crystals.
+The inaccuracy of these crystals may often lead to malfunction of the hardware
+search funciton.
+Therefore, the 
+.Nm
+driver tries to detect the crystal quality during attachment. If the crystal
+of insufficient accuracy was detected, hardware search function is disabled.
+It can be forcefully re-enabled by setting the 0x08 flag.
